--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
       </div>
     </nav>
 
-    <main>labas</main>
+    <main>
+      <section class="about-section">
+        I have experience developing web applications, from simple landing pages
+        to progressive web applications. I strive to create software that not
+        only functions efficiently under the hood, but also provides intuitive,
+        pixel-perfect user experiences.
+      </section>
+      <br />
+      <section class="education-section">
+        <div class="about">
+          <img
+            class="logo"
+            src="./photos/klaipados_paslauga3_ir_verslo_mokykla-_logo.png"
+            alt=""
+          />
+          <div class="klpvm-about">
+            <p class="school">Klaipėdos paslaugų ir verslo mokykla</p>
+            <p class="learn">Automobilių mechanikas</p>
+          </div>
+        </div>
+        <div class="about">
+          <img class="logo" src="./photos/BIT.png" alt="" />
+          <div>
+            <p class="school">Baltic Institute of Technology</p>
+            <p class="learn">Full-Stack</p>
+          </div>
+        </div>
+      </section>
+      <section class="experience-section">Experience</section>
+      <section class="projects-section">
+        Projects
+        <div>Youtube</div>
+      </section>
+      <!-- <section class="contact-section">Contacts</section> -->
+    </main>
   </body>
 </html>
