--- a/index.html
+++ b/index.html
@@ -72,8 +72,16 @@
       </section>
       <section class="experience-section">Experience</section>
       <section class="projects-section">
-        Projects
-        <div>Youtube</div>
+        <div class="projects">
+          <div class="project-photo">
+            <img src="./photos/real-estate.png" alt="">
+          </div>
+          <div class="project-info">
+            <div class="project-name">Real estate</div>
+            <div class="project-about">about</div>
+            <div class="project-language">kalbos su kuriom buvo daryta</div>
+          </div>
+        </div>
       </section>
       <!-- <section class="contact-section">Contacts</section> -->
     </main>
