project section update, css update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/sidebar.css" />
     <link rel="stylesheet" href="./style/main.css" />
   </head>
-  <body style="height: 2000px">
+  <body>
     <nav class="sidebar">
       <div class="profile-section">
         <div class="profile">
@@ -74,14 +74,50 @@
       <section class="projects-section">
         <div class="projects">
           <div class="project-photo">
-            <img src="./photos/real-estate.png" alt="">
+            <img src="./photos/real-estate.png" alt="" />
           </div>
           <div class="project-info">
-            <div class="project-name">Real estate</div>
-            <div class="project-about">about</div>
-            <div class="project-language">kalbos su kuriom buvo daryta</div>
+            <div class="project-name">
+              <a href="https://laurynaskl.github.io/project-real-estate/" target="_blank"> Real estate </a>
+              <a href="https://github.com/LaurynasKl/project-real-estate" target="_blank"> Code </a>
+            </div>
+            <div class="project-about">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta,
+              eveniet dolores eligendi, reprehenderit architecto ea doloremque
+              magni in a facilis vitae qui quos? Assumenda, cupiditate corrupti
+              perferendis dolor blanditiis non!
+            </div>
+            <div class="project-language">
+              <div>HTML</div>
+              <div>CSS</div>
+            </div>
           </div>
         </div>
+
+
+        <div class="projects">
+          <div class="project-photo">
+            <img src="./photos/real-estate.png" alt="" />
+          </div>
+          <div class="project-info">
+            <div class="project-name">
+              <a href="#"> Real estate </a>
+              <a href="#"> Code </a>
+            </div>
+            <div class="project-about">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta,
+              eveniet dolores eligendi, reprehenderit architecto ea doloremque
+              magni in a facilis vitae qui quos? Assumenda, cupiditate corrupti
+              perferendis dolor blanditiis non!
+            </div>
+            <div class="project-language">
+              <div>HTML</div>
+              <div>CSS</div>
+            </div>
+          </div>
+        </div>
+
+
       </section>
       <!-- <section class="contact-section">Contacts</section> -->
     </main>
