--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./style/general.css" />
     <link rel="stylesheet" href="./style/sidebar.css" />
     <link rel="stylesheet" href="./style/main.css" />
@@ -34,10 +43,18 @@
       </div>
       <div class="links-section">
         <div class="links-items">
-          <a href="">Linkedin</a>
-          <a href="">Facebook</a>
-          <a href="">Instagram</a>
-          <a href="">Github</a>
+          <a href="https://www.facebook.com/laurynas.klumbys.94">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+          <a href="">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/laurynas-klumbys-558254256">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/LaurynasKl">
+            <i class="fa-brands fa-github"></i>
+          </a>
         </div>
       </div>
     </nav>
@@ -78,8 +95,18 @@
           </div>
           <div class="project-info">
             <div class="project-name">
-              <a href="https://laurynaskl.github.io/project-real-estate/" target="_blank"> Real estate </a>
-              <a href="https://github.com/LaurynasKl/project-real-estate" target="_blank"> Code </a>
+              <a
+                href="https://laurynaskl.github.io/project-real-estate/"
+                target="_blank"
+              >
+                Real estate
+              </a>
+              <a
+                href="https://github.com/LaurynasKl/project-real-estate"
+                target="_blank"
+              >
+                Code
+              </a>
             </div>
             <div class="project-about">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta,
@@ -93,16 +120,15 @@
             </div>
           </div>
         </div>
-
 
         <div class="projects">
           <div class="project-photo">
-            <img src="./photos/real-estate.png" alt="" />
+            <img src="./photos/collab.png" alt="" />
           </div>
           <div class="project-info">
             <div class="project-name">
-              <a href="#"> Real estate </a>
-              <a href="#"> Code </a>
+              <a href="https://laurynaskl.github.io/project-collab/">Collab</a>
+              <a href="https://github.com/LaurynasKl/project-collab"> Code </a>
             </div>
             <div class="project-about">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta,
@@ -116,8 +142,6 @@
             </div>
           </div>
         </div>
-
-
       </section>
       <!-- <section class="contact-section">Contacts</section> -->
     </main>
