update css and selector

--- a/index.html
+++ b/index.html
@@ -29,16 +29,27 @@
           <h1 class="name">Laurynas Klumbys</h1>
         </div>
         <div class="introduction">
-          <p>Hi, my name is Laurynas Klumbys and I'm a front-end developer.</p>
+          <p>
+            Hi, my name is Laurynas Klumbys and I'm a junior front-end
+            developer.
+          </p>
         </div>
       </div>
 
       <div class="navigation-section">
         <div class="nav-items">
-          <div>About</div>
-          <div>Education</div>
-          <div>Experience</div>
-          <div>Projects</div>
+          <div>
+            <a href="index.html#about">About</a>
+          </div>
+          <div>
+            <a href="index.html#education">Education</a>
+          </div>
+          <div>
+            <a href="index.html#experience">Experience</a>
+          </div>
+          <div>
+            <a href="index.html#projects">Projects</a>
+          </div>
         </div>
       </div>
       <div class="links-section">
@@ -46,7 +57,7 @@
           <a href="https://www.facebook.com/laurynas.klumbys.94">
             <i class="fa-brands fa-facebook"></i>
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/k_laurynas/">
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a href="https://www.linkedin.com/in/laurynas-klumbys-558254256">
@@ -60,21 +71,21 @@
     </nav>
 
     <main>
-      <section class="about-section">
+      <section id="about" class="about-section">
         I have experience developing web applications, from simple landing pages
         to progressive web applications. I strive to create software that not
         only functions efficiently under the hood, but also provides intuitive,
         pixel-perfect user experiences.
       </section>
       <br />
-      <section class="education-section">
+      <section id="education" class="education-section">
         <div class="about">
           <img
             class="logo"
             src="./photos/klaipados_paslauga3_ir_verslo_mokykla-_logo.png"
             alt=""
           />
-          <div class="klpvm-about">
+          <div>
             <p class="school">Klaipėdos paslaugų ir verslo mokykla</p>
             <p class="learn">Automobilių mechanikas</p>
           </div>
@@ -87,8 +98,10 @@
           </div>
         </div>
       </section>
-      <section class="experience-section">Experience</section>
-      <section class="projects-section">
+      <section id="experience" class="experience-section">
+        Don't have experience, now looking intership
+      </section>
+      <section id="projects" class="projects-section">
         <div class="projects">
           <div class="project-photo">
             <img src="./photos/real-estate.png" alt="" />
