css baclground color picking

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="index.html#education">Education</a>
           </div>
           <div>
-            <a href="index.html#experience">Experience</a>
+            <a href="index.html#language">Languages</a>
           </div>
           <div>
             <a href="index.html#projects">Projects</a>
@@ -98,8 +98,19 @@
           </div>
         </div>
       </section>
-      <section id="experience" class="experience-section">
-        Don't have experience, now looking intership
+      <section id="language" class="language-section">
+        <div class="experience">
+          <div class="expertise">
+            Language
+            <div>HTML</div>
+            <div>CSS</div>
+          </div>
+          <div class="expertise">
+            Experience
+            <div>Junior</div>
+            <div>Junior</div>
+          </div>
+        </div>
       </section>
       <section id="projects" class="projects-section">
         <div class="projects">
