--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
             src="./photos/IMG_1928..JPG"
             alt="profilio nuotrauka"
           />
-          <h1 class="name">Laurynas Klumbys</h1>
+          <div>
+            <h1 class="name">Laurynas Klumbys</h1>
+            <p> Front-end developer </p>
+          </div>
         </div>
         <div class="introduction">
           <p>
-            Hi, my name is Laurynas Klumbys and I'm a junior front-end
-            developer.
+            <!-- Hi, my name is Laurynas Klumbys and I'm a junior front-end
+            developer. -->
           </p>
         </div>
       </div>
@@ -72,10 +75,13 @@
 
     <main>
       <section id="about" class="about-section">
-        I have experience developing web applications, from simple landing pages
-        to progressive web applications. I strive to create software that not
-        only functions efficiently under the hood, but also provides intuitive,
-        pixel-perfect user experiences.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, dolor
+        officia! Sint, rem, repellendus quibusdam minus, laborum quas ex placeat
+        eum doloremque quod soluta excepturi. Nemo voluptate optio earum
+        recusandae. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Velit earum, magnam sit quam ipsum incidunt sed doloremque accusantium
+        cum sapiente. Repudiandae quam nisi aperiam corrupti dolores enim facere
+        nemo soluta.
       </section>
       <br />
       <section id="education" class="education-section">
